# Plotscript

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  TSmessage.hpp  TSmessage_tests.cpp  Vagrantfile  atom.cpp  atom.hpp  atom_tests.cpp  environment.cpp  environment.hpp  environment_tests.cpp  expression.cpp  expression.hpp  expression_tests.cpp  go.mod  input_widget.cpp  input_widget.hpp  interpreter.cpp  interpreter.hpp  interpreter_tests.cpp  myWidgets.cpp  myWidgets.hpp  notebook.cpp  notebook_app.cpp  notebook_app.hpp  notebook_test.cpp  output_widget.cpp  output_widget.hpp  parse.cpp  parse_tests.cpp  plotscript.code-workspace  plotscript.cpp  readme.md  startup.pls  startup.script  startup_config.h  token.cpp  token.hpp  (+1 more)
.github/workflows/: cmake.yml
Main/: CMakeLists.txt
Main/inc/: atom.h  expression.h  interpreter.h  startup_config.h  token.h
Main/src/: CMakeLists.txt  atom.cpp  environment.cpp  expression.cpp  interpreter.cpp  main.cpp  parse.cpp  token.cpp
PlotscriptApp/: CMakeLists.txt  atom.cpp  environment.cpp  expression.cpp  interpreter.cpp  main.cpp  parse.cpp
PlotscriptApp/includes/: environment.h  expression.h  interrupt_handler.h  startup.script  startup_config.h
app/: CMakeLists.txt  atom.cpp  atom.h  environment.cpp  expression.cpp  expression.h  interpreter.cpp  interpreter.h  interrupt_handler.h  main.cpp  parse.cpp  parse.h  semantic_error.h  token.cpp  token.h
includes/: startup_config.h
lexer/: lexer.go  lexer_test.go
tests/: CMakeLists.txt  doctest.h  exercise03.pls  test_atom.cpp  test_environment.cpp  test_expression.cpp  test_interpreter.cpp  test_main.cpp  test_parse.cpp  test_token.cpp  validation_tests.cpp
token/: token.go
